# Products_AI_Assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/database/: mysql.py
backend/routes/: chat.py  products.py
backend/services/: gemini_chain.py  vectore_store.py
data/: data_insertion.py
embeddings/: sync_pinecone.py
frontend/: app.py
