[project]
name = "shop-assistant-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.3",
    "pinecone>=9.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tqdm>=4.68.3",
    "uvicorn>=0.49.0",
]
